2011-08-13  Sam Weinig  <sam@webkit.org>

        Remove assertion from -[WebUndefined dealloc] to try to mollify the bots.

        * bindings/objc/WebScriptObject.mm:
        (-[WebUndefined dealloc]):

2011-08-13  Sam Weinig  <sam@webkit.org>

        Remove unused variables from WebVideoFullscreenController.h
        https://bugs.webkit.org/show_bug.cgi?id=66192

        Reviewed by Dan Bernstein.

        * platform/mac/WebVideoFullscreenController.h:
        Remove _isWindowLoaded, _savedUIMode and _savedUIOptions which were not used.

2011-08-13  Sam Weinig  <sam@webkit.org>

        Fix incorrect objective-c initialize in WebCore
        https://bugs.webkit.org/show_bug.cgi?id=66191

        Reviewed by David Kilzer.

        * accessibility/mac/AccessibilityObjectWrapper.mm:
        (-[AccessibilityObjectWrapper initWithAccessibilityObject:]):
        * rendering/RenderThemeMac.mm:
        (-[WebCoreRenderThemeNotificationObserver initWithTheme:WebCore::]):
        Correctly initialize by assigning to self and nil checking the result.

2011-08-13  Adam Barth  <abarth@webkit.org>

        Fix clang build.

        * platform/chromium/PopupMenuChromium.h:

2011-08-13  David Kilzer  <ddkilzer@apple.com>

        <http://webkit.org/b/66188> WebCore.xcodeproj has duplicate entries again

        Reviewed by Dan Bernstein.

        * WebCore.xcodeproj/project.pbxproj: Remove duplicate entries
        by using uniq.  Originally noticed by Xcode 4.

2011-08-12  Dan Bernstein  <mitz@apple.com>

        <rdar://problem/7337717> Add an option to automatically show tooltips (with the full text) over truncated text
        https://bugs.webkit.org/show_bug.cgi?id=66178

        Reviewed by Simon Fraser.

        * WebCore.exp.in: Export setShowsToolTipOverTruncatedText().
        * page/Chrome.cpp:
        (WebCore::Chrome::setToolTip): If no title is found, and the page is set to show tooltips over